--- a/public/afterlogin/personagem.html
+++ b/public/afterlogin/personagem.html
@@ -31,8 +31,13 @@
             </ul>
         </nav>
     </header>
-    <div id="containerPerso">
-    </div>
+    <main class="main-perso">
+        <div id="tituloPersonagem">
+        </div>
+        <div id="containerPerso">
+        </div>
+        <div id="graphText"></div>
+    </main>
 </body>
 
 </html>
