--- a/public/afterlogin/quiz.html
+++ b/public/afterlogin/quiz.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="container telaquiz">
             <div id="quiz" class="quiz">
-                Bem vindo ao Quiz sobre o personagem <span id="nome_perso"></span>
+                Bem vindo ao Quiz sobre o <span id="nome_perso"></span>
                 <button onclick="iniciar()" class="btn">Iniciar Quiz</button>
             </div>
             <div class="inputQuiz" id="inputQuiz">
